Began with header for entry list and fixed button alignment in tab-header

--- a/app/assets/stylesheets/components/_search_area.css.sass
+++ b/app/assets/stylesheets/components/_search_area.css.sass
@@ -4,7 +4,6 @@ $search-field-height: 32px
 // Search Area Layout
 
 .search-area
-  position: relative
   height: $search-area-height
   +box-sizing("border-box")
   *
