--- a/app/assets/stylesheets/module.css.sass
+++ b/app/assets/stylesheets/module.css.sass
@@ -159,6 +159,16 @@
   border-top: 1px solid $lightest-gray
   background-color: $gray-background
   +box-shadow(0 -1px 4px rgba(0,0,0,0.07), 0 1px 1px rgba(255,255,255,0.8) inset)
+
+.tab-header
+  h1
+    display: inline-block
+    font-size: 2em
+    margin-right: 20px
+    color: $dark-gray
+    padding-left: 25px
+    line-height: $tab-header-height - 2px
+    vertical-align: middle
   
 .tab-actions
 
